# QTOpenGLWindow

./: .gitignore  CMakeLists.txt  README.md
qrc/: QTOpenGLWindow.qml  resources.qrc
src/: arcball.cpp  arcball.h  fbo.cpp  fbo.h  fboRenderer.cpp  fboRenderer.h  qDualeQuaternion.h  renderUnit.cpp  renderUnit.h  transform.h
src/Geometry/: bulk.cpp  bulk.h  geometry.h  grid.cpp  grid.h  mesh.cpp  mesh.h  multicolorSpheres.cpp  multicolorSpheres.h  points.cpp  points.h  spheres.cpp  spheres.h
src/Helper/: axisAlignedBoundingbox.cpp  axisAlignedBoundingbox.h  objLoader.cpp  objLoader.h  plyLoader.cpp  plyLoader.h
src/Transformation/: arcball.cpp  arcball.h  qDualQuaternion.h  transform.h
test/: CMakeLists.txt
test/assets/shaders/gl3/: bulk.frag  bulk.vert  checkerboard.frag  checkerboard.vert  mcspheres.frag  mcspheres.vert  part.frag  part.vert  partAsSpheres.frag  partAsSpheres.vert  phong.frag  phong.vert
test/qrc/: main.qml  resources.qrc
test/src/: main.cpp  openGLWindow.cpp  openGLWindow.h
